# MiniRDS

./: .gitignore  CMakeLists.txt  LICENSE  mini_rds.kdev4
common/: CMakeLists.txt
common/Socket/: CMakeLists.txt  SocketUdp.c  SocketUdp.h
server/: CMakeLists.txt  main.c
server/Encoder/: CMakeLists.txt  FFmpegEncoder.c  FFmpegEncoder.h
server/VideoInput/: CMakeLists.txt  VideoInput.c  VideoInput.h
server/VideoInput/CameraVideo/: CMakeLists.txt  OpenCVCamera.cpp  OpenCVCamera.h
server/fbtool/: CMakeLists.txt  fbtool.c
view/: CMakeLists.txt  main.cpp
view/Decoder/: CMakeLists.txt  FFmpegDecoder.c  FFmpegDecoder.h
